# cyberpunk-2077-modding

./: .gitignore  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
scripts/: .gitignore  config.py.example  main.py  pyproject.toml
src/mods/FriendlyVehicles/: README.md
src/mods/FriendlyVehicles/audioware/: manifest.yml
src/mods/FriendlyVehicles/docs/: CHANGELOG.md
src/mods/FriendlyVehicles/redscript/: FriendlyVehicles.reds  Hooks.reds
src/mods/MoreLevels/: README.md
src/mods/MoreLevels/docs/: CHANGELOG.md
src/mods/MoreLevels/r6/tweaks/: MoreLevels.yaml
src/mods/MoreLevels/redscript/: Hooks.reds  MoreLevels.reds  Settings.reds
src/mods/MoreLevels/redscripts/: MoreLevels.reds
src/mods/MoreLevels/wolvenkit/: MoreLevels.archive
src/mods/MoreLevels/wolvenkit/MoreLevels/: .gitignore  MoreLevels.cpmodproj  fileTreeState.json
src/mods/MoreLevels/wolvenkit/MoreLevels/packed/archive/pc/mod/: MoreLevels.archive
src/mods/MoreLevels/wolvenkit/MoreLevels/source/archive/nevertoxic-morelevels/localisation/: en-us.json
src/mods/MoreLevels/wolvenkit/MoreLevels/source/resources/: MoreLevels.archive.xl
src/mods/SaveManager/: README.md
src/mods/SaveManager/redscript/: SaveManager.reds
src/shared/redsUserHints/: NeverToxicShared.toml
